Scene Experience class with inputs to control the number of moving actors.

--- a/view/dim/nature/index.html
+++ b/view/dim/nature/index.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Dimension: Nature</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
 </head>
 <body>
 
-<h1>Dimension: Nature</h1>
+<div class="container">
+    <h1>Dimension: Nature</h1>
+</div>
 
-<canvas id="stage" width="768" height="768">
-    Your browser does not support canvas.
-</canvas>
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-8">
+            <canvas id="stage" width="500" height="500">
+                Your browser does not support canvas.
+            </canvas>
+        </div>
+        <div class="col-md-4">
+            <fieldset>
+                <div class="form-group">
+                    <label for="input-actor-count">
+                        Actor Count <span id="actor-count">10</span>
+                    </label>
+                    <input id="input-actor-count" class="form-control" type="range" value="10" min="1" max="100" step="1">
+                </div>
+            </fieldset>
+        </div>
+    </div>
+
+</div>
 
 <script type="text/javascript" src="/msb-web-examples/scripts/nature.js"></script>
 
